--- a/src/index.html
+++ b/src/index.html
@@ -9,19 +9,19 @@
     <title>Генрих II</title>
 </head>
 <body>
+    <a href="#" class="menu-btn"><span></span></a> <!-- /.menu-btn -->
+
     <nav class="navbar">
         <div class="container">
             <div class="navbar-block">
                 <ul class="navbar-list">
-                    <li class="navbar-list__item"><a href="#featues">Преимущества</a></li>
-                    <!-- /.navbar-list__item -->
-                    <li class="navbar-list__item"><a href="#">Планировка</a></li>
+                    <li class="navbar-list__item"><a href="#features">Преимущества</a></li>
                     <!-- /.navbar-list__item -->
                     <li class="navbar-list__item"><a href="#price">Цены</a></li>
                     <!-- /.navbar-list__item -->
                     <li class="navbar-list__item"><a href="#place">Расположение</a></li>
                     <!-- /.navbar-list__item -->
-                    <li class="navbar-list__item"><a href="#galery">Галерея</a></li>
+                    <li class="navbar-list__item"><a href="#gallery">Галерея</a></li>
                     <!-- /.navbar-list__item -->
                     <li class="navbar-list__item"><a href="#contacts">Контакты</a></li>
                     <!-- /.navbar-list__item -->
@@ -59,7 +59,7 @@
         </section>
         <!-- /.hero -->
 
-        <section class="section features">
+        <section class="section features" id="features">
             <div class="container">
                 <h2 class="section-title">Преимущества</h2>
                 <!-- /.section-title -->
@@ -139,7 +139,259 @@
             <!-- /.container -->
         </section>
         <!-- /.question -->
+
+        <section class="section rate" id="price">
+            <div class="container">
+                <h2 class="section-title rate__title">Тарифы</h2>
+                <!-- /.section-title rate__title -->
+                <div class="rate-block">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <td>КОЛ-ВО КОМНАТ</td>
+                                <td>М<sup>2</sup></td>
+                                <td>ЦЕНА</td>
+                                <td>ЭТАЖ</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>48 м. кв.</td>
+                                <td>23 700 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>88 м. кв.</td>
+                                <td>23 700 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>57 м. кв.</td>
+                                <td>13 600 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>48 м. кв.</td>
+                                <td>23 700 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>28 м. кв.</td>
+                                <td>12 200 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>68 м. кв.</td>
+                                <td>12 200 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>78 м. кв.</td>
+                                <td>13 200 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>98 м. кв.</td>
+                                <td>16 300 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <td>КОЛ-ВО КОМНАТ</td>
+                                <td>М<sup>2</sup></td>
+                                <td>ЦЕНА</td>
+                                <td>ЭТАЖ</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>48 м. кв.</td>
+                                <td>23 700 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>88 м. кв.</td>
+                                <td>23 700 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>57 м. кв.</td>
+                                <td>13 600 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>48 м. кв.</td>
+                                <td>23 700 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>28 м. кв.</td>
+                                <td>12 200 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>68 м. кв.</td>
+                                <td>12 200 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>78 м. кв.</td>
+                                <td>13 200 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                            <tr>
+                                <td>1-комнатный номер</td>
+                                <td>98 м. кв.</td>
+                                <td>16 300 000 ₽</td>
+                                <td>1-ый</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.rate -->
+
+        <section class="gallery" id="gallery">
+            <div class="container">
+                <h2 class="section-title gallery__title">Галерея</h2>
+                <!-- /.section-title gallery__title -->
+                <div class="gallery-block">
+                    <div class="gallery-block__img"><img src="img/galery/1.png" alt="gallery-img"></div>
+                    <!-- /.gallery-block__img -->
+                    <div class="gallery-block__img"><img src="img/galery/2.jpg" alt="gallery-img"></div>
+                    <!-- /.gallery-block__img -->
+                    <div class="gallery-block__img"><img src="img/galery/3.jpg" alt="gallery-img"></div>
+                    <!-- /.gallery-block__img -->
+                    <div class="gallery-block__img"><img src="img/galery/4.jpg" alt="gallery-img"></div>
+                    <!-- /.gallery-block__img -->
+                    <div class="gallery-block__img"><img src="img/galery/5.jpg" alt="gallery-img"></div>
+                    <!-- /.gallery-block__img -->
+                    <div class="gallery-block__img"><img src="img/galery/6.png" alt="gallery-img"></div>
+                    <!-- /.gallery-block__img -->
+                </div>
+                <!-- /.gallery-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.gallery -->
+
+        <section class="location" id="place">
+            <div class="container">
+                <h2 class="section-title location__title">Расположение</h2>
+                <!-- /.section-title location__title -->
+                <p class="location__text">«Генрих II» расположен в центре курортного посёлка Дагомыс. Комплекс выполнен в немецком стиле, сочетает в себе исторически воссозданную атмосферу средневековья, использование современных технологий.</p>
+                <p class="location__text">Гостям, приехавших на автомобиле, можно предоставить охраняемую стоянку.</p>
+                <p class="location__text">В 50 метрах от комплекса находится городской пляж.</p>
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.location -->
+
+        <section class="contacts section" id="contacts">
+            <div class="container">
+                <h2 class="section-title contacts__title">Остались <span>вопросы?</span></h2>
+                <!-- /.section-title contacts__title -->
+                <span class="contacts__subtitle">Оставьте заявку и наш менеджер ответит на все Ваши вопросы</span> <!-- /.contacts__subtitle -->
+                <form action="" class="form contacts__form">
+                    <input type="text" placeholder="Ваше имя:">
+                    <input type="tel" placeholder="Ваш телефон:">
+                    <button class="button contact__button">Задать вопрос</button> <!-- /.button contact__button -->
+                </form>
+                <div class="contacts-block">
+                    <div class="contacts-info">
+                        <div class="contacts-info-item">
+                            <div class="contacts-info-item__img"><img src="img/contacts/libra.png" alt="libra"></div>
+                            <!-- /.contacts-info-item__img -->
+                            <div class="contacts-info__text">
+                                <h3 class="contacts-info-item__title">Юридическое</h3>
+                                <!-- /.contacts-info-item__title -->
+                                <h3 class="contacts-info-item__title">Сопровождение</h3>
+                                <!-- /.contacts-info-item__title -->
+                            </div>
+                        </div>
+                        <!-- /.contacts-info-item -->
+                        <div class="contacts-info-item">
+                            <div class="contacts-info-item__img"><img src="img/contacts/credit-card.png" alt="credit-card"></div>
+                            <!-- /.contacts-info-item__img -->
+                            <div class="contacts-info__text">
+                                <h3 class="contacts-info-item__title">Клубная карта</h3>
+                                <!-- /.contacts-info-item__title -->
+                                <h3 class="contacts-info-item__title">GRC</h3>
+                                <!-- /.contacts-info-item__title -->
+                            </div>
+                        </div>
+                        <!-- /.contacts-info-item -->
+                    </div>
+                    <!-- /.contacts-info -->
+                    <div class="contacts-person">
+                        <div class="contacts-person__img">
+                            <img src="img/contacts/contacts-woman.png" alt="менеджер">
+                        </div>
+                        <!-- /.contacts-person__img -->
+                        <div class="contacts-text">
+                            <h3 class="contacts-text__title">Иванова Светлана</h3>
+                            <span class="contacts-text__subtitle">Ваш персональный менеджер</span> <!-- /.contacts-text__subtitle -->
+                            <span class="contacts-text__phone">+ 7 (929) 828-11-05</span> <!-- /.contacts-text__phone -->
+                        </div>
+                        <!-- /.contacts-text -->
+                    </div>
+                    <!-- /.contacts-person -->
+                </div>
+                <!-- /.contacts-block -->
+            </div>
+            <!-- /.container -->
+        </section>
+        <!-- /.contacts -->
     </main>
     <!-- /.main -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-block">
+                <div class="footer__logo"><img src="img/footer/logo.png" alt="logo"></div>
+                <!-- /.footer__logo -->
+                <div class="footer-text">
+                    <p class="footer-text__office"><span>Офис продаж:</span> г. Сочи, ул. Горького, д. 42/2</p>
+                    <!-- /.footer-text__office -->
+                    <span class="footer-text__phone">+7 (929) 826-53-03</span>
+                </div>
+                <!-- /.footer-text -->
+            </div>
+            <!-- /.footer-block -->
+        </div>
+        <!-- /.container -->
+    </footer>
+    <!-- /.footer -->
+
+    <script src="js/jquery-3.5.0.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("body").on('click', '[href*="#"]', function(e){
+                var fixed_offset = 100;
+                $('html,body').stop().animate({ scrollTop: $(this.hash).offset().top - fixed_offset }, 1000);
+                e.preventDefault();
+            });
+        });
+    </script>
 </body>
 </html>
